<resources>
    <string name="app_name">AppLocker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_password">Password Change</string>
    <string name="draw_pattern">Draw pattern to unlock</string>
    <string name="enter_password">Enter Password</string>
    <string name="rate_us">Rate us</string>

    <string name="pref_def_delay_time" translatable="false">60</string>

    <string name="locker_invalid_password">Wrong password</string>
    <string name="click_to_show">Click to show BlurLockView</string>
    <string name="answer">Enter your answer here</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ovarlay_permission_description">Permit drawing over other apps</string>
    <string name="usage_data_access_description">Allow applocker to monitor which other apps you use.</string>

    <!--Textos nuevos-->
    <string name="BIENVE">Bienvenido</string>
    <string name="PADRE">Soy un adulto</string>
    <string name="HIJO">Soy un niño</string>
    <string name="LOGIN">Inicio de sesión</string>
    <string name="MAIL">correo@correo.com</string>
    <string name="OLVIDO">Olvidé mi contraseña</string>
    <string name="REGISTRO">Crear una cuenta nueva</string>
    <string name="CANCEL">Cancelar</string>
    <string name="CONFIRMAR">CONFIIRMAR</string>
    <string name="SUPERPO">Permisos de superposición</string>
    <string name="DESC_SUPERPO">Permite superponer aplicaciones</string>
    <string name="PERMIT">Permitir</string>
    <string name="DATA_USE">Permisos de acceso a datos</string>
    <string name="DESC_DATA_USE">Permite monitorear aplicaciones</string>
    <string name="REPASS">Repita el patrón por favor</string>
    <string name="NOMATCH">Ambos patrones no coinciden</string>
    <string name="DIBUJAR">Dibujar patrón</string>
    <string name="PAT_ACEPT">Patrones si coinciden, click en confirmar</string>
    <string name="OB_MAIL">Ingrese un email y vuelva a dibujar e patrón</string>
    <string name="title_activity_hijos">Equipos administrados</string>
    <string name="CAMB_PASS">Cambiar contraseña</string>
    <string name="POR_CONF">Su cuenta ha sido creada, por favor, ingrese al vinculo enviado a su email para confirmar su cuenta</string>
    <string name="MAIL_SEND">El servidor está tardando en responder, intentelo nuevamente en dos minutos si no ha recibido un email de APPBLOCK</string>
    <string name="INFO_USER">Solo podrá administrar las aplicaciones de este usuario si ya ha sido ingresado en el equipo de niño</string>
    <string name="TOD_APP">Todas las aplicaciones</string>
    <string name="LOCK_APP">Aplicaciones bloqueadas</string>
    <string name="UNLOCK_APP">Aplicaciones sin bloquear</string>
    <string name="ACCESO">Permitir acceso a configuraciones de hardware</string>
</resources>
