<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/REGISTRO"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/ET_mail_padre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="12dp"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        android:background="@color/blanco"
        android:hint="@string/MAIL"/>


    <com.takwolf.android.lock9.Lock9View
        android:id="@+id/lock_9_view"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_gravity="center"
        app:lock9_nodeSrc="@drawable/node_small_normal"
        app:lock9_nodeOnSrc="@drawable/node_small_active"
        app:lock9_nodeOnAnim="@anim/node_on_2"
        app:lock9_nodeSize="16dp"
        app:lock9_nodeAreaExpand="24dp"
        app:lock9_lineColor="#fff"
        app:lock9_lineWidth="4dp"
        app:lock9_autoLink="true"
        app:lock9_enableVibrate="true"
        app:lock9_vibrateTime="20" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/DIBUJAR"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#fff"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/BTN_cancelar"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="@string/CANCEL"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:onClick="Cancelar"
            />



        <Button
            android:id="@+id/BTN_confirmar"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="@string/CONFIRMAR"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            android:onClick="Confirmar"
            />



    </LinearLayout>


</LinearLayout>
