<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:text="@string/LOGIN"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/ET_mail_padre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        android:background="@color/blanco"
        android:hint="@string/MAIL"/>

    <com.takwolf.android.lock9.Lock9View
        android:id="@+id/lock_9_view"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        app:lock9_nodeSrc="@drawable/node_small_normal"
        app:lock9_nodeOnSrc="@drawable/node_small_active"
        app:lock9_nodeOnAnim="@anim/node_on_2"
        app:lock9_nodeSize="16dp"
        app:lock9_nodeAreaExpand="24dp"
        app:lock9_lineColor="#fff"
        app:lock9_lineWidth="4dp"
        app:lock9_autoLink="true"
        app:lock9_enableVibrate="true"
        app:lock9_vibrateTime="20" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <Button
            android:id="@+id/btn_olvido_pass"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/OLVIDO"
            android:onClick="Olvido_pass"
            />
        <Button
            android:id="@+id/confirmarCuenta"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/REGISTRO"
            android:onClick="Registro"
            />

    </LinearLayout>

</LinearLayout>
